src/style.css
/* ... */
main > header .default-image img.shape1 {
    width: 30%;
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: 10;
    /* transform: rotate(180deg); */
}

main > header .default-image img.shape2 {
    width: 40%;
    position: absolute;
    bottom: 5%;
    right: 0;
    z-index: -10;
}

main > header .default-image img.shape3 {
    width: 66%;
    position: absolute;
    top: -10%;
    right: 0;
    z-index: 5;
    transform: rotate(45deg);
}





@media (max-width: 1190px) {
  
  body main article.topic-summary.newsletter {
    display: block;
  }

}



@media (min-width: 1500px) {

  .home-index .data-points .data-point.khan-academy h2 {
    text-indent: -6000px;
  }

}

@media (max-width: 1140px) {

  .home-index main footer .attribution-list ul.expand {
    grid-template-columns: 1fr 1fr;
  }

}

@media (max-width: 900px) {

  .home-index main .case-studies {
    background: var(--vocabulary-brand-color-tomato);
    padding: 5%;

  }

  .home-index .case-studies footer {
    margin: 0;
    margin-top: 2em;
    padding: 0;
  }

  .home-index .data-points ul {
    /* display: block; */
    box-sizing: border-box;
    width: 90%;
    margin: 0 auto;
    /* padding: 0 1em; */
  }

  .home-index main .posts ul {
    display: flex;
    flex-wrap: wrap;
  }

  .home-index main footer {
    width: 100%;
    box-sizing: border-box;
  }

  .faq-index .toc article.featured > ul {
    grid-template-columns: 1fr 1fr;
  }

}

@media (max-width: 765px) {

  body main article.topic-summary.about figure {
    display: none;
  }

  .home-narrative article.topic-summary.focus-area:nth-of-type(odd) figure {
    order: -1;
  } 

  article.topic-summary.highlight figure {
    margin-bottom: 7em;
  }
}

@media (max-width: 705px) {

  .home-index .topic-summary {
    display: block;
  }

  .home-index .topic-summary figure {
    display: none;
  }

  .home-index .case-studies > ul {
    grid-template-columns: 1fr 1fr;
  }

  .home-index .data-points ul {
    display: block;
    padding-top: 2em;
  }

   .home-index main article.posts.featured > ul li:nth-child(1) {
    padding: 2em;
  }

  .home-index main .posts {
      padding: 0 var(--vocabulary-page-edges-space);
  }

  .home-index main footer .attribution-list ul.expand {
      display: block;
  }
}

@media (max-width: 480px) {
  .faq-index .toc article.featured > ul {
    display: block;
  }
}

@media (max-width: 425px) {

  .home-index .attribution-list {
    padding: 2em;
  }

  .home-index .attribution-list h2 {
    width: 50%;

    hyphens: auto;
    word-break: break-word;
  }

}

@media (max-width:480px) {
  .home-index .case-studies > ul {
    display: block;
  }

  .home-index .case-studies > ul li {
    margin-bottom: 3em;
  }
}

@media (max-width: 425px) {



  .home-index .attribution-list {
    padding: 2em;
  }

  .home-index .attribution-list h2 {
    width: 50%;
    font-size: .5em;
    hyphens: auto;
    word-break: break-word;

  }

}

/* patches */

/* main > article figure img, main > figure img {
  width: 100%;
} */

main .content ul, main .content ol {
    line-height: 150%;
}

.chooser-page main .content ul, .chooser-page main .content ol {
  line-height: 100%;
}

/* Classic Editor TinyMCE WYSIWYG editor image alignment  */
/* TODO: port in alignleft and alignright rules here as well? */
main figure:has(img.aligncenter) {
  width: 100%;
  margin-left: 0;
}

/* Classic Editor TinyMCE WYSIWYG editor image alignment, previous theme's markukp  */
/* presently <figure> */
div[id^="attachment_"] {
  width: 120%;
  margin: 0;
  margin-left: -10%;
  margin-bottom: 3em;
  padding: 0;
  float: none;
}

/* presently <img> */
div[id^="attachment_"] img[class^="wp-image"]:not([width]) {
  width: 100%;
}

/* presently <span class="attribution> */
div[id^="attachment_"] p[id^="caption-attachment-"] {
  display: block;
  margin-top: 1em;
  font-size: 1em;
}

div[id^="attachment_"].alignleft {
  margin-top: 2em;
  margin-right: 2em;
  margin-left: -10%;
  width: 50%;
  float: left;
}

div[id^="attachment_"].alignleft:after {
  display: block;
  content: '';
  height: 3em;
  clear: both;
}

div[id^="attachment_"].aligncenter {
  width: 100%;

  margin-left: 0;
}

div[id^="attachment_"].alignright {
  margin-top: 2em;
  margin-right: -10%;
  margin-left: 2em;
  width: 50%;
  float: right;
}

div[id^="attachment_"].alignright:after {
  display: block;
  content: '';
  height: 2em;
  clear: both;
}

main .content div[id^="attachment_"].alignleft {
  margin-left: 0;
  width: 40%;
}

main .content div[id^="attachment_"].alignright {
  margin-right: 0;
  width: 40%;
}

main .content figure:has(img.alignleft), .blog-post main figure:has(img.alignleft) {
  margin-right: 2em;
  margin-left: 0;
  width: 40%;
  float: left;
}

main .content figure:has(img.alignright), .blog-post main figure:has(img.alignright) {
  margin-right: 0;
  margin-left: 2em;
  width: 40%;
  float: right;
}

.course-index, course-page {
  background: white;
}

.course-page main .content {
  grid-column: 2 / span 9;
}

@media (max-width:400px) {

  div[id^="attachment_"].alignleft {
    width: 100%;
    float: none;
    margin: 0;
  }

  div[id^="attachment_"].alignright {
    width: 100%;
    float: none;
    margin: 0;
  }

  main .content div[id^="attachment_"].alignleft {
    width: 100%;
    float: none;
    margin: 0;
  }

  main .content div[id^="attachment_"].alignright {
    width: 100%;
    float: none;
    margin: 0;
  }

  main .content figure:has(img.alignleft), .blog-post main figure:has(img.alignleft) {
    width: 100%;
    float: none;
    margin: 0;
  }

  main .content figure:has(img.alignright), .blog-post main figure:has(img.alignright) {
    width: 100%;
    float: none;
    margin: 0;
  }

}

